<resources>
    <string name="app_name">Complaint</string>
    <string name="signUp" />
    <string name="signup">SignUp</string>
    <string name="already_user">already user</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="complaint_system">COMPLAINT SYSTEM</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="EnterEmail">Emaill</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="complaint_management_system">COMPLAINT MANAGEMENT SYSTEM</string>
    <string name="admin_button_description">adminbutto</string>
    <string name="staff_button_description">staffbuto</string>
    <string name="Login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="report_problem">Report Problem</string>
    <string name="staff_name">Staff Name</string>
    <string name="room_number">Room Number</string>
    <string name="system_issue">System Issue</string>
    <string name="send">Send</string>
    <string name="staff_Name">Staff Name:</string>
    <string name="Room_No">Room No:</string>
    <string name="issue">Issue:</string>
    <string name="new_issue">New issue</string>
    <string name="solved">Solved</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="contact_number">contect No</string>
    <string name="Staff_Name">Staff Name</string>
    <string name="back">Back</string>
    <string name="view_feedback">VIEW FEEDBACK</string>
    <string name="backe">Back</string>
    <string name="view_request">VIEW REQUEST</string>
    <string name="close">Close</string>
</resources>