<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_2"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/tview"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:hint="@string/complaint_system"
        android:textAlignment="center"
        android:textColor="#5A227A"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxStrokeColor="@color/colorbg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/l_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/l_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Sign In Button -->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/sign_in"
        android:textColor="#fff"
        android:textSize="17sp"
        android:textStyle="bold" />

    <!-- Forgot Password Link -->
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorbg"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
