<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_3"
    android:textAlignment="center"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/text1"
        android:layout_width="406dp"
        android:layout_height="63dp"
        android:background="@color/colorTransparentWhite"
        android:backgroundTint="#B7D3E8"
        android:foregroundTint="#BD3838"
        android:text="@string/complaint_management_system"
        android:textAlignment="center"
        android:textColor="#220B6A"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <!-- This line centers the button horizontally -->


    <ImageButton
        android:id="@+id/admin"
        android:layout_width="189dp"
        android:layout_height="163dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="412dp"
        android:contentDescription="@string/admin_button_description"
        android:src="@mipmap/img_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/staffButton"
        android:layout_width="181dp"
        android:layout_height="177dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="164dp"
        android:contentDescription="@string/staff_button_description"
        android:src="@mipmap/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
